# python-sofa

./: .gitignore  README.rst  azure_pipeline.yml  pyproject.toml  requirements.txt  setup.py
src/sofa/: __init__.py  _database.py  version.py
src/sofa/conventions/: __init__.py
src/sofa/datatypes/: __init__.py
