[build-system]
requires = ["setuptools >= 70.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "sofa.__version__" }

[project]
name = "dr-python-sofa"
description = "Python SOFA API (Dear Reality Fork)"
requires-python = ">= 3.12"
dynamic = ["version"]
dependencies = [
    "numpy==1.26.4",
    "scipy==1.14.0",
    "certifi==2024.6.2",
    "cftime==1.6.4",
    "DateTime==5.5",
    "netCDF4==1.7.1",
    "pytz==2024.1",
    "zope.interface==6.4",
]

[project.optional-dependencies]
dev = ["build==1.2.1"]

[project.urls]
Repository = "http://github.com/dearreality/python-sofa/"
